database conection and refactor - get y post